[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]>=6.2",
  "wheel"
]

[project]
name = "topofileformats"
dynamic = ["version"]
authors = [{ name = "Sylvia Whittle", email = "sylviwhittle@gmail.com" }]
description = "Read and retrieve data from various AFM file formats."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = [
  "afm",
  "image processing"
]

dependencies = [
  "matplotlib",
  "igor2",
  "tifffile",
  "pySPM",
  "pySPM",
  "loguru",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "pytest-cov",
  "pylint",
  "ruff"
]

[project.urls]
"Homepage" = "https://github.com/AFM-SPM/topofileformats"
"Bug Tracker" = "https://github.com/AFM-SPM/topofileformats/issues"

[tool.setuptools_scm]
write_to = "topofileformats/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
  )/
)
'''

[tool.ruff]
exclude = [
  "*.ipynb",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pycache__",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs/conf.py",
  "node_modules",
  "pygwytracing.py",
  "tests/tracing/test_dnacurvature.py",
  "tests/tracing/test_dnatracing.py",
  "tests/tracing/test_tracing_dna.py",
  "topostats/plotting.py",
  "topostats/tracing/dnatracing.py",
  "topostats/tracing/tracing_dna.py",
  "topostats/tracing/tracingfuncs.py",
  "venv",
]
# per-file-ignores = []
line-length = 120
target-version = "py310"
select = ["A", "B", "C", "D", "E", "F", "PT", "PTH", "R", "S", "W", "U"]
ignore = [
  "B905",
  "E501",
  "S101",
  "T201"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "PT", "PTH", "R", "S", "W", "U"]
unfixable = []

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = true

[tool.coverage.run]
source = ["topofileformats"]
omit = [
  "topofileformats/_version.py",
  "*tests*",
  "**/__init__*",
]